docs/mongodb-community/sample-app/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-sample-app
  namespace: mongodb
  labels:
    app: mongodb-sample-app
    argocd.argoproj.io/instance: mongodb-sample-app
spec:
  ingressClassName: nginx
  rules:
  - host: mongodb-sample-app.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-sample-app-frontend
            port:
              number: 3000
